# rimworld-wiki-chat-bot

./: README.md  pyproject.toml
src/: db.py  llm.py  main.py  scraper.py  scraper_ui.py  settings.py
src/models/: pages.py
src/ui/: chat.py  scrape.py
