[tool.poetry]
name = "rimworld-wiki-chat-bot"
version = "0.1.0"
description = ""
authors = ["Kenny <kennylink2626@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
psycopg = {extras = ["binary"], version = "^3.2.1"}
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
